# app/Http/Controllers/api/ArticleController.php
@@ -9,16 +9,58 @@ use Illuminate\Http\JsonResponse;
 use App\Models\AboutUs;
 use App\Models\Faq;
 use App\Models\Feature;
-use App\Models\NavMenu;
+use App\Models\LearnerTermsAndCondition;
+use App\Models\InstructorTermsAndCondition;
+use App\Models\PaymentPolicyArticle;
 use App\Models\PrivacyPolicyArticle;
+use App\Models\NavMenu;
 use Illuminate\Support\Facades\Auth;
 
 class ArticleController extends BaseController
 {
-     /**
-     * Display about us data
-     * 
-     * @return Illuminate\Http\JsonResponse
+    /**
+     * @OA\Get(
+     *     path="/api/articles-data?features=true&learnerTC=true&instructorTC=true&paymentPolicy=true",
+     *     summary="Get all article modules based on parameters( 1.Features 2.Learner Terms and Conditions 3.Instructor Terms and Conditions 4.Privacy Policy 5.Payment Policy )",
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     */
+    public function getAllArticleModules(Request $request): JsonResponse
+    {
+        $responseData = [];
+        try {
+            if ($request->has('features')) {
+                $responseData['features'] = Feature::get();
+            }
+            if ($request->has('learnerTC')) {
+                $responseData['learnerTC'] = LearnerTermsAndCondition::get();
+            }
+            if ($request->has('instructorTC')) {
+                $responseData['instructorTC'] = InstructorTermsAndCondition::get();
+            }
+            if ($request->has('paymentPolicy')) {
+                $responseData['paymentPolicy'] = PaymentPolicyArticle::get();
+            }
+            return $this->successResponse($responseData, "Data Found");
+        }catch (\Exception $ex) {
+            return $this->errorResponse($ex);
+        }
+    }
+    
+    /**
+     * @OA\Get(
+     *     path="/api/about",
+     *     summary="Get About us page data",
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
      */
     public function getDataOfAboutUs(): JsonResponse {
        
